--- a/index.html
+++ b/index.html
@@ -13,5 +13,239 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="header__contenedor">
+            <div class="header__barra">
+                <a href="/">
+                    <img class="header__logo" src="img/logo.svg" alt="Imagen de Logotipo">
+                </a>
+
+                <nav class="navegacion">
+                    <a class="navegacion__enlace" href="index.html">Inicio</a>
+                    <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+                    <a class="navegacion__enlace" href="blog.html">Blog</a>
+                    <a class="navegacion__enlace" href="tienda.html">Tienda</a>
+                </nav>
+            </div>
+        
+
+            <div class="modelo">
+                <h1 class="modelo__nombre">Modelo VAI</h1>
+                <p class="modelo__descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, nostrum voluptatum illo dicta quos reprehenderit</p>
+                <p class="modelo__precio">$399</p>
+                <a href="producto.html" class="modelo__enlace">Ver Producto</a>
+            </div>
+
+            <img src="img/header_guitarra.png" alt="Imagen de la Guitarra" class="header__guitarra">
+        </div>
+    </header>
+
+    <main class="productos productos__contenedor">
+        <h2 class="productos__heading">Nuestra Colección</h2>
+
+        <div class="productos__grid">
+            <div class="producto">
+                <img src="img/guitarra_01.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Lukather</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_02.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">SRV</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_03.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Borland</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_04.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">VAI</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_05.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">THOMPSON</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_06.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">WHITE</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_07.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">COBAIN</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_08.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">KRIEGER</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_09.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">CAMPBELL</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_10.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">REED</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_11.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Hazel</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+            <div class="producto">
+                <img src="img/guitarra_12.jpg" alt="Guitarra imagen" class="producto__imagen">
+
+                <div class="producto__contenido">
+                    <h3 class="producto__nombre">Kirk</h3>
+                    <p class="producto__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, perspiciatis!</p>
+                    <p class="producto__precio">$299</p>
+                    <a href="producto.html" class="producto__enlace">Ver Producto</a>
+                </div>
+            </div>
+
+        </div>
+    </main>
+
+    <section class="cursos">
+        <div class="cursos__contenedor cursos__grid">
+            <div class="cursos__contenido">
+                <h2 class="cursos__heading">Aprende a Tocar Guitarra</h2>
+                <p class="cursos__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos tempora accusantium facilis</p>
+                <a href="#" class="cursos__enlace">Más información</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="blog">
+        <h2 class="blog__heading">Nuestro Blog</h2>
+        <div class="blog__contenedor blog__grid">
+            <article class="entrada">
+                <img src="img/blog_1.jpg" alt="Imagen Blog" class="entrada__imagen">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primer Guitarra?</h3>
+                    <p class="entrada__fecha">20 Enero 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit officiis modi doloribus molestiae placeat similique ex et.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <img src="img/blog_2.jpg" alt="Imagen Blog" class="entrada__imagen">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primer Guitarra?</h3>
+                    <p class="entrada__fecha">20 Enero 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit officiis modi doloribus molestiae placeat similique ex et.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <img src="img/blog_3.jpg" alt="Imagen Blog" class="entrada__imagen">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primer Guitarra?</h3>
+                    <p class="entrada__fecha">20 Enero 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit officiis modi doloribus molestiae placeat similique ex et.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <img src="img/blog_4.jpg" alt="Imagen Blog" class="entrada__imagen">
+                <div class="entrada__contenido">
+                    <h3 class="entrada__titulo">¿Como elegir tu primer Guitarra?</h3>
+                    <p class="entrada__fecha">20 Enero 2023</p>
+                    <p class="entrada__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit officiis modi doloribus molestiae placeat similique ex et.</p>
+                    <a href="entrada.html" class="entrada__enlace">Leer Entrada</a>
+                </div>
+            </article>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <div class="footer__contenedor footer__contenido">
+            <nav class="footer__nav">
+                <a href="index.html" class="footer__enlace">Inicio</a>
+                <a href="nosotros.html" class="footer__enlace">Nosotros</a>
+                <a href="blog.html" class="footer__enlace">Blog</a>
+                <a href="tienda.html" class="footer__enlace">Tienda</a>
+            </nav>
+
+            <p class="footer__copyright">Todos los Derechos Reservados</p>
+        </div>
+    </footer>
+
 </body>
 </html>
